src/test/deca/syntax/invalid/created/test_invalid_manyextend.deca
class X extends X extends X{

}
